mdapi/Custom/objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>GP_Purchase_Price_Label__c</fullName>
        <formula>&apos;$&apos; + 
IF(
      Actual_Acquisition_Price__c &gt;= 1000000,
      TEXT(FLOOR(Actual_Acquisition_Price__c / 1000000)) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    IF(
      Actual_Acquisition_Price__c &gt;= 1000,
      RIGHT(TEXT(FLOOR(Actual_Acquisition_Price__c / 1000)), 3) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    RIGHT(TEXT(FLOOR(Actual_Acquisition_Price__c)), 3)
+ &apos; &apos; +  &apos;/&apos; + &apos; &apos; + &apos;$&apos; +  
IF(
      Acquisition_Price_PSF__c &gt;= 1000000,
      TEXT(FLOOR(Acquisition_Price_PSF__c / 1000000)) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    IF(
      Acquisition_Price_PSF__c &gt;= 1000,
      RIGHT(TEXT(FLOOR(Acquisition_Price_PSF__c / 1000)), 3) &amp; &quot;,&quot;,
      &quot;&quot;) &amp;
    RIGHT(TEXT(FLOOR(Acquisition_Price_PSF__c)), 3)
+ &apos; &apos; + &apos;psf&apos;</formula>
        <label>Purchase Price</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Rehab_Budget_Est_UW__c</fullName>
        <formula>IF(
Rehab_Budget_Est_UW__c &gt; 0,
(&apos;$&apos; +
IF(
 Rehab_Budget_Est_UW__c  &gt;= 1000000,
TEXT(FLOOR(Rehab_Budget_Est_UW__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(
Rehab_Budget_Est_UW__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Rehab_Budget_Est_UW__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Rehab_Budget_Est_UW__c)), 3)
),&apos;&apos;)</formula>
        <label>Rehab Est. @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Rehab_Revised_Budget_Rehab_Start__c</fullName>
        <formula>IF(
Rehab_Revised_Budget_Rehab_Start__c &gt; 0,
(&apos;$&apos; +
IF(
 Rehab_Revised_Budget_Rehab_Start__c  &gt;= 1000000,
TEXT(FLOOR(Rehab_Revised_Budget_Rehab_Start__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(Rehab_Revised_Budget_Rehab_Start__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Rehab_Revised_Budget_Rehab_Start__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Rehab_Revised_Budget_Rehab_Start__c)), 3)
),&apos;&apos;)</formula>
        <label>Revised Rehab Budget</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Replacement_Cost_Label__c</fullName>
        <formula>&apos;$&apos; + 
IF( 
Replacement_Cost_Est_UW_old__c &gt;= 1000000, 
TEXT(FLOOR(Replacement_Cost_Est_UW_old__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Replacement_Cost_Est_UW_old__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Replacement_Cost_Est_UW_old__c/ 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Replacement_Cost_Est_UW_old__c)), 3) 
+ &apos; &apos; + &apos;/&apos; + &apos; &apos; + &apos;$&apos; + 
IF( 
Replacement_Cost_PSF_UW_old__c &gt;= 1000000, 
TEXT(FLOOR(Replacement_Cost_PSF_UW_old__c / 1000000)) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
IF( 
Replacement_Cost_PSF_UW_old__c &gt;= 1000, 
RIGHT(TEXT(FLOOR(Replacement_Cost_PSF_UW_old__c/ 1000)), 3) &amp; &quot;,&quot;, 
&quot;&quot;) &amp; 
RIGHT(TEXT(FLOOR(Replacement_Cost_PSF_UW_old__c)), 3) 
+ &apos; &apos; + &apos;psf&apos;</formula>
        <label>Replace. Cost @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Square_Feet__c</fullName>
        <formula>IF( Square_Feet__c &gt; 0 ,
(IF(
 Square_Feet__c  &gt;= 1000000,
TEXT(FLOOR(Square_Feet__c / 1000000)) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
IF(Square_Feet__c &gt;= 1000,
RIGHT(TEXT(FLOOR(Square_Feet__c / 1000)), 3) &amp; &quot;,&quot;,
&quot;&quot;) &amp;
RIGHT(TEXT(FLOOR(Square_Feet__c)), 3)
),&apos;&apos;)</formula>
        <label>Square Feet</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Status__c</fullName>
        <label>GP Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_WIP_Group__c</fullName>
        <label>Weeks In Process (Group)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GP_Weeks_in_Process__c</fullName>
        <label>Weeks in Process</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>GP_Yield_Bucket__c</fullName>
        <formula>CASE( 
	(FLOOR(Expected_Gross_Annual_Rent_UW__c / All_In_Cost_Est_UW__c*100)/1),
	0, &quot;0-6.99%&quot;,
	1, &quot;0-6.99%&quot;,
	2, &quot;0-6.99%&quot;,
	3, &quot;0-6.99%&quot;,
	4, &quot;0-6.99%&quot;,
	5, &quot;0-6.99%&quot;,
	6, &quot;0-6.99%&quot;,
	7, &quot;7-8.99%&quot;,
	8, &quot;7-8.99%&quot;,
	9, &quot;9-10.99%&quot;,
	10, &quot;9-10.99%&quot;,
	11, &quot;11-12.99%&quot;,
	12, &quot;11-12.99%&quot;,
	&quot;13% +&quot;
)</formula>
        <label>Yield Bucket</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_After_HOA__c</fullName>
        <formula>(( Expected_Gross_Annual_Rent_UW__c )-12*( Monthly_HOA_UW__c ))/( All_In_Cost_Est_UW__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Yield After HOA</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Gross_Yield_Est_UW__c</fullName>
        <formula>IF(All_In_Cost_Est_UW__c &gt; 0,
	Expected_Gross_Annual_Rent_UW__c / All_In_Cost_Est_UW__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Gross Yield Est. @ UW</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Community__c</fullName>
        <formula>Residence__r.HOA_Parent__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If the property has both a primary HOA and a master community and those records have been linked to this property&apos;s Residence record, this field will reflect the name of the Master Community. If you know that detail, please update on Residence record.</inlineHelpText>
        <label>HOA (Master Community)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Master_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the HOA  Master Community via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the related Residence record.</inlineHelpText>
        <label>HOA (Master) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Master_Prohibits_Leasing__c</fullName>
        <formula>Residence__r.HOA_Master_Prohibits_Leasing__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this property is in a Master Community that we have on file and is associated to this property via the look-up field on the Residence object, this will reflect if the Master Community has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Master Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Options__c</fullName>
        <formula>TEXT(Residence__r.HOA_Options__c)</formula>
        <label>HOA</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Phone__c</fullName>
        <formula>Residence__r.HOA_Phone__c</formula>
        <label>HOA Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Primary_PrePay__c</fullName>
        <inlineHelpText>Please enter the amount that will be pre-paid to the primary HOA via escrow.  This amount should be the amount that will be due for the remainder of the current fiscal year.  Please ensure that the HOA is entered on the Residence record.</inlineHelpText>
        <label>HOA (Primary) PrePay</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>HOA_Primary__c</fullName>
        <formula>Residence__r.HOA_Primary__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If we have a record of the HOA in Salesforce and it is associated with the Residence record related to this record, it will display here. (Note: to add an HOA, go to the Companies tab and select the Record Type for &quot;Home Owner&apos;s Association&quot;.)</inlineHelpText>
        <label>HOA (Primary)</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Prohibits_Leasing__c</fullName>
        <formula>IF(
				NOT(
								ISBLANK(
												Acq_Pipeline__r.HOA_Restrictions__c
								)
				),
				Acq_Pipeline__r.HOA_Restrictions__c, Residence__r.Prohibits_Leasing__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>If this property is in an HOA that we have on file and is associated to this property via the look-up field on the Residence object, this will reflect if the HOA has strict bylaws that prohibit leasing.</inlineHelpText>
        <label>HOA Prohibits Leasing?</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HOA_Set_Up__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>This is a field to facilitate the post-acquisition workflow.  When the HOA coordinator has confirmed the HOA details and created the appropriate tracking records, this box should be checked .</inlineHelpText>
        <label>HOA Tracking Set-Up</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HOA__c</fullName>
        <formula>Residence__r.HOA__c</formula>
        <label>HOA Name @ UW</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HPA_5_Year_CAGR__c</fullName>
        <label>HPA (5-Year CAGR)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>HPA_Cumulative_Return__c</fullName>
        <formula>IF(Market_Value_UW__c &gt; 0,
	Sale_Price__c / Market_Value_UW__c -1,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>HPA Cumulative Return</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>High_Value__c</fullName>
        <label>High Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Hold_Contact_Date__c</fullName>
        <label>Hold Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Contact__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Released_Date__c</fullName>
        <label>Hold Released  Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hold_Released__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Released</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Home_Front_Thumbnail_Image__c</fullName>
        <formula>IMAGE( &apos;https://&apos; + IF( CONTAINS($Organization.Id, &apos;E0000000YNkj&apos;), &apos;ih-prod&apos;, &apos;ih-sandbox&apos; ) + &apos;.s3.amazonaws.com/&apos; + CASESAFEID( $Organization.Id ) + &apos;/&apos; + Home_Front_Thumbnail_Url_Suffix__c, &apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Home Front Thumbnail Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Home_Front_Thumbnail_Url_Suffix__c</fullName>
        <label>Home Front Thumbnail Url Suffix</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IH_Agent_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This is the Contact lookup for the Broker who created this record using the Brokersite.</description>
        <label>IH Agent Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Portfolio</relationshipLabel>
        <relationshipName>PortfolioAgentContact</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>IRS_Lien_Amount_Memo_Item__c</fullName>
        <inlineHelpText>This is the IRS lien on the individual as opposed to the property.  This amount is not factored into underwriting.</inlineHelpText>
        <label>IRS Lien Amount (Memo Item)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Date__c</fullName>
        <inlineHelpText>Date of contact with the legal TIP occupant only.  Not for contact with relatives, friends or others not legally authorized to make decision for the property.

The following Status fields are dependent on this field:
TIP Status
Initial Contact Status</inlineHelpText>
        <label>Initial Contact Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Notes__c</fullName>
        <inlineHelpText>Following the following format when entering notes: Date(MM/DD/YYYY) - Your Name: Note</inlineHelpText>
        <label>Initial Contact Notes</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Initial_Contact_Status__c</fullName>
        <formula>IF(
	AND(Hold_Contact__c, NOT(Hold_Released__c)), $Setup.Status_Tags__c.ICS_Contact_On_Hold__c,
	IF(
		TEXT(Post_Acquisition_Next_Step__c) = $Setup.Status_Tags__c.PANS_TIP__c,
		IF(
			Recommend_Referral_to_Eviction__c ,
			 $Setup.Status_Tags__c.ICS_ContactAborted_ReferredToEviction__c ,
			IF(
				NOT(ISBLANK(Initial_Contact_Date__c )),
				 $Setup.Status_Tags__c.ICS_InitialContactNegotiation_in_Process__c ,
				IF(
					NOT(ISBLANK(Contact_Attempt_Notice_3_Date__c)),
					 $Setup.Status_Tags__c.ICS_3rd_Notice_Left__c ,
					IF(
						NOT(ISBLANK(Contact_Attempt_Notice_2_Date__c)),
						 $Setup.Status_Tags__c.ICS_2nd_Notice_Left__c ,
						IF(
							NOT(ISBLANK(Contact_Attempt_Notice_1_Date__c)),
							 $Setup.Status_Tags__c.ICS_1st_Notice_Left__c ,
							IF(
								NOT(ISBLANK(DK_Assigned_Date__c)),
								 $Setup.Status_Tags__c.ICS_Driver_Assigned__c ,
								IF(
									Refer_to_3rd_Party_Door_Knock_Agency__c ,
									 $Setup.Status_Tags__c.ICS_Referred_for_3rd_Party_Door_Knock__c ,
									&quot;&quot;
								)
							)
						)
					)
				)
			)
		),
		&quot;&quot;
	)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Contact Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Eviction_Notice_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Eviction Status</inlineHelpText>
        <label>Initial Eviction Notice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Initial_Lease_up_Cost_Est_UW_Formula__c</fullName>
        <description>Effective July 2014, Asset Mgmt. began rolling Acquisition Overhead, Initial Lease-Up Costs, and Rehab Overhead into Platform Build-Up Costs (or Allocation).  Therefore, all values in this field were changed to 0.00.  Refer to D-00013010 and its attached spreadsheet.</description>
        <formula>IF( 
ISBLANK(Exp_Gross_Monthly_Rent_UW__c), 
null, 
((Exp_Gross_Monthly_Rent_UW__c*0.00*0.00+0*(1-0.00)))*0.00 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Initial Lease-up Cost Est @ UW (Formula)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Initial_Lease_up_Cost_Est_UW__c</fullName>
        <label>Initial Lease-up Cost Est @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Instrument__c</fullName>
        <label>Instrument</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Credit Facility</fullName>
                </value>
                <value>
                    <fullName>Securitization</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_ID__c</fullName>
        <formula>Residence__r.Insurance_Inspection_ID__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Inspection_Notes__c</fullName>
        <formula>Residence__r.Insurance_Inspection_Notes__c</formula>
        <inlineHelpText>This field is editable on Residence.</inlineHelpText>
        <label>Insurance Inspection Notes</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Interest_Rate__c</fullName>
        <label>Interest Rate</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Last_Updated__c</fullName>
        <label>Last Updated</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lawn_Maintenance_End_Service_Email__c</fullName>
        <label>Lawn Maintenance End Service Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Lawn_Maintenance_Team__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Lawn Maintenance Team</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>LawnMaintenanceTeamProperties</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LeaseSign_Date_First_Tenant__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Deed Status
Occupied Status @ Current</inlineHelpText>
        <label>LeaseSign Date @ First Tenant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Marketing_Start_Date__c</fullName>
        <label>Lease Marketing Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Negotiations_Start_Date__c</fullName>
        <label>Lease Negotiations Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_New_Submitted_to_Underwriting_Date__c</fullName>
        <label>Lease New Submitted to Underwriting Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_New_Underwriting_Approval_Date__c</fullName>
        <label>Lease New Underwriting Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_New_Underwriting_Rejected_Date__c</fullName>
        <label>Lease New Underwriting Rejected Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Period_End_Current_Tenant__c</fullName>
        <inlineHelpText>Yardi Populated</inlineHelpText>
        <label>Lease Period End @ Current Tenant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Period_End_First_Tenant__c</fullName>
        <label>Lease Period End @ First Tenant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Period_Start_Current_Tenant__c</fullName>
        <inlineHelpText>Yardi populated</inlineHelpText>
        <label>Lease Period Start @ Current Tenant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Period_Start_First_Tenant__c</fullName>
        <label>Lease Period Start @ First Tenant</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lease_Strategy__c</fullName>
        <label>Lease Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Rent to New Tenant</fullName>
                </value>
                <value>
                    <fullName>Rent to Current Tenant</fullName>
                </value>
                <value>
                    <fullName>Purchased Rented</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_1__c</fullName>
        <label>Lease Term (months) - Lease 1</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_2__c</fullName>
        <label>Lease Term (months) - Lease 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Term_months_Lease_3__c</fullName>
        <label>Lease Term (months) - Lease 3</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lease_Unsuccessful_Negotiations_End_Date__c</fullName>
        <label>Lease Unsuccessful Negotiations End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Leased_Unit__c</fullName>
        <label>Leased Unit</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Leasing_Coordinator__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leasing Coordinator</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>contains</operation>
                <value>Invitation Leasing/TIP</value>
            </filterItems>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties7</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Leasing_Status__c</fullName>
        <label>Leasing Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lease Negotiations in Process</fullName>
                </value>
                <value>
                    <fullName>Lease Marketing in Process</fullName>
                </value>
                <value>
                    <fullName>Lease Submitted for Underwriting</fullName>
                </value>
                <value>
                    <fullName>Lease Underwriting Rejected</fullName>
                </value>
                <value>
                    <fullName>Leased</fullName>
                </value>
                <value>
                    <fullName>Rent Ready</fullName>
                </value>
                <value>
                    <fullName>Underwriting Approved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Leasing_Team_Manager__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Leasing Team Manager</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>*Invitation Leasing/TIP Manager</value>
            </filterItems>
            <filterItems>
                <field>User.Region__c</field>
                <operation>equals</operation>
                <valueField>$Source.Region__c</valueField>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Properties8_del</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Letter_of_Eviction_Date__c</fullName>
        <inlineHelpText>The following Status fields are dependent on this field:
Eviction Status</inlineHelpText>
        <label>Letter of Engagement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Levered_IRR__c</fullName>
        <label>Levered IRR</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Levered_Peak_Equity__c</fullName>
        <label>Levered Peak Equity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Levered_WDP__c</fullName>
        <label>Levered WDP</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Levered_WDPx__c</fullName>
        <label>Levered WDPx</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Liens_Fines_Est_UW__c</fullName>
        <label>Liens/Fines Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Listing_Agent_Viewable__c</fullName>
        <label>Listing Agent Viewable</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Listing_OTM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Listing OTM/Down</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Listings_Open__c</fullName>
        <inlineHelpText>Status not equal to Leased or Cancelled</inlineHelpText>
        <label># Listings - Open</label>
        <summaryFilterItems>
            <field>Listing__c.Status__c</field>
            <operation>equals</operation>
            <value>Down (In Rehab), OTM - Ready to List, OTM - Active Listing, HOLD - Currently Not Leasable</value>
        </summaryFilterItems>
        <summaryForeignKey>Listing__c.Portfolio__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Loan_Fees__c</fullName>
        <label>Loan Fees</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Loan_LTV__c</fullName>
        <label>Loan LTV</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Location_Score__c</fullName>
        <formula>Residence__r.Location_Score__c</formula>
        <inlineHelpText>Score from 1 to 5 describing the geographic location of the asset, with 1 being the lowest and 5 being the highest</inlineHelpText>
        <label>Location Score</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Lockbox_Rekey_Date__c</fullName>
        <label>Lockbox &amp; Rekey Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Lot_Sq_Ft__c</fullName>
        <formula>Residence__r.Lot_Sq_Ft__c</formula>
        <label>Lot Sq/Ft</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Low_Value__c</fullName>
        <label>Low Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M1_Expense_Margin_Est_UW__c</fullName>
        <label>M1 Expense Margin %</label>
        <precision>6</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M1_Net_Income_Est_UW__c</fullName>
        <formula>(Expected_Gross_Annual_Rent_UW__c-(Expected_Gross_Annual_Rent_UW__c * M1_Expense_Margin_Est_UW__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>M1 Net Income Est. @ UW</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_Prcnt_UW__c</fullName>
        <label>Property Tax Est. % @ UW</label>
        <precision>18</precision>
        <scale>7</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>M2_Property_Tax_Est_UW__c</fullName>
        <formula>IF(NOT
			(
							ISBLANK(
											Acq_Pipeline__r.Property_Tax_Est_UW__c 
							)
			)
			,
			 Acq_Pipeline__r.Property_Tax_Est_UW__c ,
			M2_Property_Tax_Est_Prcnt_UW__c * Actual_Acquisition_Price__c
		)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Property Tax Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>M2_Special_Assessment_Expense_Est_UW__c</fullName>
        <label>Special Assessment Exp. Est. @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Mailbox_No__c</fullName>
        <formula>Residence__r.Mailbox_No__c</formula>
        <label>Mailbox No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Map_Property__c</fullName>
        <formula>HYPERLINK(

&quot;http://maps.google.com?q=&quot; &amp;  Property_Street__c  &amp; &quot;%20&quot; &amp;  Property_City__c  &amp; &quot;%20&quot; &amp;  Property_State__c

 &amp; &quot;%20&quot; &amp;  Property_Zip_Code__c

,

IMAGE(&quot;/servlet/servlet.FileDownload?file=015E0000000fMzZ&quot;, &quot;Maps Billing Address in Google&quot;)

)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Map Property</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Value_PSF_UW__c</fullName>
        <formula>IF(Square_Feet__c &gt; 0,
	Market_Value_UW__c / Square_Feet__c,
	null
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Market Value PSF</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market_Value_UW__c</fullName>
        <label>Market Value @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Market__c</fullName>
        <label>Market</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Atlanta</fullName>
                </value>
                <value>
                    <fullName>Charlotte</fullName>
                </value>
                <value>
                    <fullName>Chicago</fullName>
                </value>
                <value>
                    <fullName>Dallas</fullName>
                </value>
                <value>
                    <fullName>Denver</fullName>
                </value>
                <value>
                    <fullName>Houston</fullName>
                </value>
                <value>
                    <fullName>Inland Empire</fullName>
                </value>
                <value>
                    <fullName>Jacksonville</fullName>
                </value>
                <value>
                    <fullName>Las Vegas</fullName>
                </value>
                <value>
                    <fullName>Los Angeles</fullName>
                </value>
                <value>
                    <fullName>Miami</fullName>
                </value>
                <value>
                    <fullName>Minneapolis</fullName>
                </value>
                <value>
                    <fullName>Nashville</fullName>
                </value>
                <value>
                    <fullName>Orlando</fullName>
                </value>
                <value>
                    <fullName>Phoenix</fullName>
                </value>
                <value>
                    <fullName>Sacramento</fullName>
                </value>
                <value>
                    <fullName>Seattle</fullName>
                </value>
                <value>
                    <fullName>Tampa</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Max_Bid_Price__c</fullName>
        <label>Max Bid Price</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Modified_Gross_Yield__c</fullName>
        <description>Expected Gross Annual Rent @ UW / (Contract Price +Rehab Budget Est. @ UW)</description>
        <formula>Expected_Gross_Annual_Rent_UW__c / (Contract_Price__c + Rehab_Budget_Est_UW__c + Broker_Expense_Est_UW__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Expected Gross Annual Rent @ UW / (Contract Price +Rehab Budget Est. @ UW)</inlineHelpText>
        <label>Modified Gross Yield</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Monthly_HOA_UW__c</fullName>
        <label>Monthly HOA @ UW</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Move_Out_Rehab_Ready_Date__c</fullName>
        <formula>IF(
	AND(
		TEXT(Post_Acquisition_Next_Step__c) =  $Setup.Status_Tags__c.PANS_Refer_to_Rehab__c,
		NOT(ISBLANK(Deed_Received_Date__c))
	),
	Deed_Received_Date__c,

IF(TEXT(Post_Acquisition_Next_Step__c) =  $Setup.Status_Tags__c.PANS_BK__c , null,
	IF(
		NOT(ISBLANK( CFK_Actual_Move_Out_Date__c )),
		CFK_Actual_Move_Out_Date__c,
		IF(
			NOT(ISBLANK( Eviction_Complete_Date__c )),
			Eviction_Complete_Date__c,

IF(OR(ISPICKVAL( Proxy_CFK_Complete__c , &quot;1&quot;), ISPICKVAL( Proxy_Eviction_Complete__c, &quot;1&quot;)), null,

			IF(
				TEXT( Post_Acq_Occupancy_Assessment__c) =  $Setup.Status_Tags__c.OSAQ_Vacant__c ,
				Acquisition_Date__c,
				null
			)
		)
	)
)))</formula>
        <inlineHelpText>The following Status fields are dependent on this field:
Rehab Status</inlineHelpText>
        <label>Move Out - Rehab Ready Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NFIP_Ameriflood_Final_Review__c</fullName>
        <label>NFIP Ameriflood Final Review</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>NFIP_Comment_Status__c</fullName>
        <label>NFIP Comment/Status</label>
        <type>TextArea</type>
    </fields>
</CustomObject>